# lllm-hub-ai-gateway

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  run.sh
src/: main.rs
src/api/: mod.rs
src/api/dto/: audio.rs  chat.rs  health.rs  mod.rs
src/api/handlers/: chat.rs  health.rs  mod.rs  transcription.rs
src/api/middleware/: auth.rs  cors.rs  mod.rs
src/api/routers/: audio.rs  chat.rs  health.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: llm_api_key.rs  mod.rs  project.rs  shared_types.rs  transcription.rs  usage.rs
src/domain/repositories/: llm_api_key_repository.rs  mod.rs  project_repository.rs  transcription_repository.rs  usage_repository.rs
src/domain/services/: llm_api_key.rs  mod.rs  transcription.rs
src/domain/services/providers/: mod.rs  openai.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/mongodb/: llm_api_key_repo.rs  mod.rs  project_repo.rs  transcription_repo.rs  usage_repo.rs
src/shared/: config.rs  error.rs  mod.rs
src/shared/utils/: encryption.rs  mod.rs  objectid_as_string.rs  string_or_objectid.rs
